crates/quaffed/tests/snapshots/end_to_end__a_scripts_leading_byte_order_mark_is_skipped.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-f"
    - scripts/bom.quaff
    - src
---
success: true
exit_code: 0
----- stdout -----
src/lib.py:2:7-2:12: Client

----- stderr -----
