crates/quaffed/tests/snapshots/end_to_end__a_semicolon_inside_an_operand_is_never_a_separator.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-e"
    - "find \"a;b\"; find \"class\""
    - src
---
success: true
exit_code: 0
----- stdout -----
src/app.py:2:12-2:14: a;b
src/lib.py:2:1-2:5: class

----- stderr -----
