crates/quaffed/tests/snapshots/end_to_end__a_string_option_finds_the_same_and_may_be_repeated.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-s"
    - class
    - "-s"
    - TODO
    - pkg
---
success: true
exit_code: 0
----- stdout -----
pkg/client.py:2:1-2:5: class
pkg/client.py:1:3-1:6: TODO
pkg/client.py:3:13-3:16: TODO
pkg/client.py:3:18-3:21: TODO

----- stderr -----
