crates/quaffed/tests/snapshots/end_to_end__an_assertion_block_that_holds_exits_0.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-e"
    - "find \"TODO\" expect 2\nfind \"FIXME\" expect none\nfind \"Client\" expect at least 1"
    - src
---
success: true
exit_code: 0
----- stdout -----
src/app.py:2:21-2:24: TODO
src/lib.py:1:3-1:6: TODO
src/lib.py:2:7-2:12: Client

----- stderr -----
