crates/quaffed/tests/snapshots/end_to_end__an_assertion_over_files_its_query_cannot_be_searched_in_fails_naming_them-2.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-e"
    - "find \"naïve\" expect 1"
    - legacy
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
quaff: -e expression 1, at character 1: cannot check for exactly 1 match of "naïve": 1 file in scope is in an unknown 8-bit encoding, which a non-ASCII query has no one spelling in, so it was not searched - "legacy/old.txt".  Found 0 in the files that were searched
