crates/quaffed/tests/snapshots/end_to_end__an_assertion_over_files_its_query_cannot_be_searched_in_fails_naming_them.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-e"
    - "find \"café\" expect none\nfind \"TODO\" expect 2"
---
success: false
exit_code: 2
----- stdout -----
latin1.txt:1:6-1:9: TODO
utf8.txt:1:1-1:4: TODO

----- stderr -----
quaff: -e expression 1, at character 1: cannot check for no matches of "café": 2 files in scope are in an unknown 8-bit encoding, which a non-ASCII query has no one spelling in, so they were not searched - "latin1.txt", "legacy/old.txt".  Found 0 in the files that were searched
