crates/quaffed/tests/snapshots/end_to_end__an_assertion_the_searched_files_already_settle_is_decided_despite_unsearched_ones-3.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-e"
    - "find \"café\" expect 1"
---
success: false
exit_code: 2
----- stdout -----
menu.txt:1:1-1:4: café

----- stderr -----
quaff: -e expression 1, at character 1: cannot check for exactly 1 match of "café": 1 file in an unknown 8-bit encoding, which a non-ASCII query has no one spelling in, was not searched - "latin1.txt".  Found 1 in the files that were searched.  To check it, re-encode the file as UTF-8, or leave it out with the scope or an ignore file
