crates/quaffed/tests/snapshots/end_to_end__an_assertion_the_searched_files_already_settle_is_decided_despite_unsearched_ones.snap
---
source: crates/quaffed/tests/end_to_end.rs
info:
  program: quaff
  args:
    - "-e"
    - "find \"café\" expect at least 1"
---
success: true
exit_code: 0
----- stdout -----
menu.txt:1:1-1:4: café

----- stderr -----
quaff: -e expression 1, at character 1: found 1 of "café", enough for at least 1 match whatever the rest hold; 1 file in an unknown 8-bit encoding, which a non-ASCII query has no one spelling in, was not searched - "latin1.txt"
